// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailConfirmationModal ChangeEmailOrTimezone sub-component Displays ReadOnlyEmails component 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  />
</DocumentFragment>
`;

exports[`EmailConfirmationModal ChangeFromVirtual sub-component Displays Hearing Location when present 1`] = `
<DocumentFragment>
  <div
    data-testid="datetime-testid"
  >
    <strong>
      Hearing Date:
    </strong>
    07/06/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    6:00 AM Eastern Time (US & Canada)
  </div>
  <div>
    <strong>
      Location:
    </strong>
    Somewhere
  </div>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ChangeFromVirtual sub-component Displays ReadOnlyEmails 1`] = `
<DocumentFragment>
  <div
    data-testid="datetime-testid"
  >
    <strong>
      Hearing Date:
    </strong>
    07/06/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    6:00 AM Eastern Time (US & Canada)
  </div>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ChangeHearingTime sub-component Displays ReadOnlyEmails component 1`] = `
<DocumentFragment>
  <div
    data-testid="datetime-testid"
  >
    <strong>
      Hearing Date:
    </strong>
    07/06/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    6:00 AM Eastern Time (US & Canada)
  </div>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ChangeToVirtual sub-component Displays appellant email error when present 1`] = `
<DocumentFragment>
  <div>
    <strong>
      Hearing Date:
    </strong>
    07/06/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    6:00 AM Eastern Time (US & Canada)
  </div>
  <div
    class="cf-form-textinput  usa-input-error "
  >
    <label
      for="appellant-email"
    >
      <strong>
        <span>
          Veteran Email
        </span>
      </strong>
    </label>
    <span
      class="usa-input-error-message"
      tabindex="0"
    >
      Something went wrong...
    </span>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput"
        id="appellant-email"
        name="appellant-email"
        type="text"
        value="Bob.Smith@test.com"
      />
    </div>
  </div>
  <div
    class="cf-form-textinput   "
  >
    <label
      for="representative-email"
    >
      <strong>
        <span>
          POA/Representative Email
        </span>
      </strong>
    </label>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput"
        id="representative-email"
        name="representative-email"
        type="text"
        value="tom.brady@caseflow.gov"
      />
    </div>
  </div>
  <p>
    Changes to the Veteran and POA / Representative emails will be used to send notifications
    <strong>
      for this hearing only
    </strong>
    .
  </p>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ChangeToVirtual sub-component Displays input for appellant and representative email 1`] = `
<DocumentFragment>
  <div
    data-testid="datetime-testid"
  >
    <strong>
      Hearing Date:
    </strong>
    07/06/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    6:00 AM Eastern Time (US & Canada)
  </div>
  <div
    class="cf-form-textinput   "
  >
    <label
      for="appellant-email"
    >
      <strong>
        <span>
          Veteran Email
        </span>
      </strong>
    </label>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput"
        id="appellant-email"
        name="appellant-email"
        type="text"
        value="Bob.Smith@test.com"
      />
    </div>
  </div>
  <div
    class="cf-form-textinput   "
  >
    <label
      for="representative-email"
    >
      <strong>
        <span>
          POA/Representative Email
        </span>
      </strong>
    </label>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput"
        id="representative-email"
        name="representative-email"
        type="text"
        value="tom.brady@caseflow.gov"
      />
    </div>
  </div>
  <p>
    Changes to the Veteran and POA / Representative emails will be used to send notifications
    <strong>
      for this hearing only
    </strong>
    .
  </p>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ChangeToVirtual sub-component Displays representative email error when present 1`] = `
<DocumentFragment>
  <div>
    <strong>
      Hearing Date:
    </strong>
    07/06/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    6:00 AM Eastern Time (US & Canada)
  </div>
  <div
    class="cf-form-textinput   "
  >
    <label
      for="appellant-email"
    >
      <strong>
        <span>
          Veteran Email
        </span>
      </strong>
    </label>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput"
        id="appellant-email"
        name="appellant-email"
        type="text"
        value="Bob.Smith@test.com"
      />
    </div>
  </div>
  <div
    class="cf-form-textinput  usa-input-error "
  >
    <label
      for="representative-email"
    >
      <strong>
        <span>
          POA/Representative Email
        </span>
      </strong>
    </label>
    <span
      class="usa-input-error-message"
      tabindex="0"
    >
      Something went wrong...
    </span>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput"
        id="representative-email"
        name="representative-email"
        type="text"
        value="tom.brady@caseflow.gov"
      />
    </div>
  </div>
  <p>
    Changes to the Veteran and POA / Representative emails will be used to send notifications
    <strong>
      for this hearing only
    </strong>
    .
  </p>
</DocumentFragment>
`;

exports[`EmailConfirmationModal DateTime sub-component Displays divider for formerly Central hearings 1`] = `
<DocumentFragment>
  <div>
    <strong>
      Hearing Date:
    </strong>
    07/11/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    8:30 AM Eastern Time (US & Canada)
    <div
      class="cf-help-divider"
    />
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal DateTime sub-component Displays formatted hearing date and time 1`] = `
<DocumentFragment>
  <div
    data-testid="datetime-testid"
  >
    <strong>
      Hearing Date:
    </strong>
    07/06/2020
    <br />
    <strong>
      Hearing Time:
    </strong>
    6:00 AM Eastern Time (US & Canada)
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal Displays ChangeEmailOrTimezone component when type is change_email_or_timezone 1`] = `
<DocumentFragment>
  <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id=""
      >
        <button
          class="cf-modal-close"
          id="Update-Timezone-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Update Timezone
          </h1>
          <div
            data-css-2flkvz=""
          >
            <p>
              An email notification for the hearing will be sent to:
            </p>
            <div
              data-css-18v9q72=""
              data-testid="read-only-emails-testid"
            />
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <div>
            <span
              class="cf-push-right"
            >
              <span>
                <button
                  class="usa-button-secondary usa-button"
                  id="button-submit-virtual-hearing"
                  type="button"
                >
                  Update and Send Email
                </button>
              </span>
            </span>
            <span
              class="cf-push-left"
            >
              <span>
                <button
                  class="cf-submit cf-btn-link usa-button"
                  id="button-cancel-virtual-hearing"
                  type="button"
                >
                  Cancel
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal Displays ChangeFromVirtual component when type is change_from_virtual 1`] = `
<DocumentFragment>
  <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id=""
      >
        <button
          class="cf-modal-close"
          id="Change-to-Video-Hearing-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Change to Video Hearing
          </h1>
          <div
            data-css-2flkvz=""
          >
            <p>
              Emails will be sent to the Veteran and POA/Representative to notify them that:
            </p>
            <ul>
              <li>
                The hearing format has been changed to Video, and their Virtual hearing URL is no longer valid
              </li>
              <li>
                They must appear in-person at their designated Regional Office or alternate hearing location
              </li>
            </ul>
            <p />
            <div>
              <strong>
                Hearing Date:
              </strong>
              07/06/2020
              <br />
              <strong>
                Hearing Time:
              </strong>
              6:00 AM Eastern Time (US & Canada)
            </div>
            <div
              data-css-18v9q72=""
              data-testid="read-only-emails-testid"
            >
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  Veteran Hearing Time
                </strong>
                <pre>
                  3:00 AM Pacific Time (US & Canada)
                </pre>
              </div>
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  Veteran Email
                </strong>
                <pre>
                  tom.brady@caseflow.gov
                </pre>
              </div>
              <div
                class="cf-help-divider"
              />
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  POA/Representative Hearing Time
                </strong>
                <pre>
                  3:00 AM Pacific Time (US & Canada)
                </pre>
              </div>
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  POA/Representative Email
                </strong>
                <pre>
                  tom.brady@caseflow.gov
                </pre>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <div>
            <span
              class="cf-push-right"
            >
              <span>
                <button
                  class="usa-button-secondary usa-button"
                  id="button-submit-virtual-hearing"
                  type="button"
                >
                  Change and Send Email
                </button>
              </span>
            </span>
            <span
              class="cf-push-left"
            >
              <span>
                <button
                  class="cf-submit cf-btn-link usa-button"
                  id="button-cancel-virtual-hearing"
                  type="button"
                >
                  Cancel
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal Displays ChangeHearingTime component when type is change_hearing_time 1`] = `
<DocumentFragment>
  <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id=""
      >
        <button
          class="cf-modal-close"
          id="Update-Hearing-Time-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Update Hearing Time
          </h1>
          <div
            data-css-2flkvz=""
          >
            <p>
              Email notifications will be sent to the Veteran, POA / Representative, and VLJ.
            </p>
            <div>
              <strong>
                Hearing Date:
              </strong>
              07/06/2020
              <br />
              <strong>
                Hearing Time:
              </strong>
              6:00 AM Eastern Time (US & Canada)
            </div>
            <div
              data-css-18v9q72=""
              data-testid="read-only-emails-testid"
            >
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  Veteran Hearing Time
                </strong>
                <pre>
                  3:00 AM Pacific Time (US & Canada)
                </pre>
              </div>
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  Veteran Email
                </strong>
                <pre>
                  tom.brady@caseflow.gov
                </pre>
              </div>
              <div
                class="cf-help-divider"
              />
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  POA/Representative Hearing Time
                </strong>
                <pre>
                  3:00 AM Pacific Time (US & Canada)
                </pre>
              </div>
              <div
                data-css-acl5jg=""
                data-testid="read-only-testid"
              >
                <strong>
                  POA/Representative Email
                </strong>
                <pre>
                  tom.brady@caseflow.gov
                </pre>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <div>
            <span
              class="cf-push-right"
            >
              <span>
                <button
                  class="usa-button-secondary usa-button"
                  id="button-submit-virtual-hearing"
                  type="button"
                >
                  Update Hearing Time
                </button>
              </span>
            </span>
            <span
              class="cf-push-left"
            >
              <span>
                <button
                  class="cf-submit cf-btn-link usa-button"
                  id="button-cancel-virtual-hearing"
                  type="button"
                >
                  Cancel
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal Matches snapshot with default props 1`] = `
<DocumentFragment>
  <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id=""
      >
        <button
          class="cf-modal-close"
          id="Change-to-Virtual-Hearing-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Change to Virtual Hearing
          </h1>
          <div
            data-css-2flkvz=""
          >
            <p>
              Email notifications will be sent to the Veteran, POA / Representative, and VLJ.
            </p>
            <div>
              <strong>
                Hearing Date:
              </strong>
              07/06/2020
              <br />
              <strong>
                Hearing Time:
              </strong>
              6:00 AM Eastern Time (US & Canada)
            </div>
            <div
              class="cf-form-textinput   "
            >
              <label
                for="appellant-email"
              >
                <strong>
                  <span>
                    Veteran Email
                  </span>
                </strong>
              </label>
              <div
                class="input-container"
              >
                <input
                  aria-readonly="false"
                  class="cf-form-textinput"
                  id="appellant-email"
                  name="appellant-email"
                  type="text"
                  value="Bob.Smith@test.com"
                />
              </div>
            </div>
            <div
              class="cf-form-textinput   "
            >
              <label
                for="representative-email"
              >
                <strong>
                  <span>
                    POA/Representative Email
                  </span>
                </strong>
              </label>
              <div
                class="input-container"
              >
                <input
                  aria-readonly="false"
                  class="cf-form-textinput"
                  id="representative-email"
                  name="representative-email"
                  type="text"
                  value="tom.brady@caseflow.gov"
                />
              </div>
            </div>
            <p>
              Changes to the Veteran and POA / Representative emails will be used to send notifications
              <strong>
                for this hearing only
              </strong>
              .
            </p>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <div>
            <span
              class="cf-push-right"
            >
              <span>
                <button
                  class="usa-button-secondary usa-button"
                  id="button-submit-virtual-hearing"
                  type="button"
                >
                  Change and Send Email
                </button>
              </span>
            </span>
            <span
              class="cf-push-left"
            >
              <span>
                <button
                  class="cf-submit cf-btn-link usa-button"
                  id="button-cancel-virtual-hearing"
                  type="button"
                >
                  Cancel
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Displays Section divider when appellant email and POA/Representative timezone edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Displays Section divider when appellant timezone and POA/Representative email edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Displays both representative email/time and appellant email/time when both timezones are edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Displays both representative email/time and appellant email/time when showAllEmails is true 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Displays only appellant email when appellantEmailEdited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Displays only representative email when representativeEmailEdited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Does not display Section divider when only POA/Representative timezone edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Central Virtual Hearing Does not display Section divider when only appellant timezone edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Displays Section divider when appellant email and POA/Representative timezone edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Displays Section divider when appellant timezone and POA/Representative email edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Displays both representative email/time and appellant email/time when both timezones are edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Displays both representative email/time and appellant email/time when showAllEmails is true 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
    <div
      class="cf-help-divider"
    />
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Displays only appellant email when appellantEmailEdited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Displays only representative email when representativeEmailEdited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Does not display Section divider when only POA/Representative timezone edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        POA/Representative Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailConfirmationModal ReadOnlyEmails sub-component Formerly Video Virtual Hearing Does not display Section divider when only appellant timezone edited 1`] = `
<DocumentFragment>
  <div
    data-css-18v9q72=""
    data-testid="read-only-emails-testid"
  >
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Hearing Time
      </strong>
      <pre>
        3:00 AM Pacific Time (US & Canada)
      </pre>
    </div>
    <div
      data-css-acl5jg=""
      data-testid="read-only-testid"
    >
      <strong>
        Veteran Email
      </strong>
      <pre>
        tom.brady@caseflow.gov
      </pre>
    </div>
  </div>
</DocumentFragment>
`;
